--- a/stylesheet.css
+++ b/stylesheet.css
@@ -12,7 +12,7 @@
 
 .inputsect{
     border: 1px solid black;
-    height: 85vh;
+    height: 90vh;
     width: 800px;
    background-color: rgba(128, 128, 128, 0.082);
 }
@@ -43,14 +43,15 @@
     margin-left: 30px;
     margin-top: 1px;
     border: 1px solid grey;
-    height: 370px;
+    height: 70vh;
     width: 550px;
     background-color: rgba(128, 128, 128, 0.082);
+    font-family: 'Times New Roman', Times, serif;
 }
 
 .orders input, label {
     margin-left: 20px;
-    margin-top: 10px;
+    margin-top: 5px;
 }
 
 .buttons{
@@ -86,6 +87,7 @@ button:hover{
     height: 85vh;
     width: 450px;
    background-color: white;
+   font-size: 5px;
 }
 
 
