--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,21 +3,22 @@
     padding: 0;
     box-sizing: border-box;
 }
-
+body{
+    height: 60vh;
+}
 .mainwrapper{
-    margin-top: 30px;
+    margin-top: 10px;
     display: flex;
     justify-content: space-around;
 }
 
 .inputsect{
     border: 1px solid black;
-    height: 90vh;
     width: 800px;
    background-color: rgba(128, 128, 128, 0.082);
 }
 
-.inputsect h1{
+.inputsect h4{
    margin-left: 15rem;
    margin-top: 10px;
 }
@@ -26,22 +27,23 @@
     border: 1px solid grey;
     height: 100px;
     width: 550px;
-    margin-left: 30px;
+    margin-left: 100px;
     box-shadow: 40px;
 }
 
 .personalinfo label{
     margin-left: 30px;
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
 .personalinfo input{
-    box-shadow: none;;
+    box-shadow: none;
 }
 
 .orders{
-    margin-left: 30px;
+    margin-left: 100px;
     margin-top: 1px;
+    margin-bottom: 60px;
     border: 1px solid grey;
     height: 70vh;
     width: 550px;
@@ -51,7 +53,7 @@
 
 .orders input, label {
     margin-left: 20px;
-    margin-top: 5px;
+    margin-top: 1px;
 }
 
 .buttons{
@@ -68,12 +70,22 @@ button:hover{
     background-color: aqua;
     color: black;
 }
-.reset{
+.resett{
     border: none;
     background-color: red;
     color: white;
 }
 
+.reset{
+    border: none;
+    background-color: red;
+    color: white;
+}
+.successs{
+    border: none;
+    background-color: green;
+    color: white;
+}
 .success{
     border: none;
     background-color: green;
@@ -82,12 +94,23 @@ button:hover{
 
 /* output section */
 
+.popupwrapper{
+    background: rgba(0, 0, 0, 0.5);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: none;
+}
+
 .outputsect{
+    margin: 20px auto;
     border: 1px solid black;
     height: 85vh;
     width: 450px;
    background-color: white;
-   font-size: 5px;
+   font-size: 15px;
 }
 
 
@@ -117,5 +140,6 @@ td {
 
 
 #totalamt{
-    margin-left: 130px;
+    margin-left: 110px;
+    font-size: 20px;
 }
