--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,145 +1,144 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-body{
-    height: 60vh;
+body {
+  height: 60vh;
 }
-.mainwrapper{
-    margin-top: 10px;
-    display: flex;
-    justify-content: space-around;
-}
-
-.inputsect{
-    border: 1px solid black;
-    width: 800px;
-   background-color: rgba(128, 128, 128, 0.082);
+.mainwrapper {
+  margin-top: 10px;
+  display: flex;
+  justify-content: space-around;
 }
 
-.inputsect h4{
-   margin-left: 15rem;
-   margin-top: 10px;
+.inputsect {
+  border: 1px solid black;
+  width: 800px;
+  background-color: rgba(128, 128, 128, 0.082);
 }
 
-.personalinfo{
-    border: 1px solid grey;
-    height: 100px;
-    width: 550px;
-    margin-left: 100px;
-    box-shadow: 40px;
+.inputsect h4 {
+  margin-left: 15rem;
+  margin-top: 10px;
 }
 
-.personalinfo label{
-    margin-left: 30px;
-    margin-top: 10px;
+.personalinfo {
+  border: 1px solid grey;
+  height: 100px;
+  width: 550px;
+  margin-left: 100px;
+  box-shadow: 40px;
 }
 
-.personalinfo input{
-    box-shadow: none;
+.personalinfo label {
+  margin-left: 30px;
+  margin-top: 10px;
 }
 
-.orders{
-    margin-left: 100px;
-    margin-top: 1px;
-    margin-bottom: 60px;
-    border: 1px solid grey;
-    height: 70vh;
-    width: 550px;
-    background-color: rgba(128, 128, 128, 0.082);
-    font-family: 'Times New Roman', Times, serif;
+.personalinfo input {
+  box-shadow: none;
 }
 
-.orders input, label {
-    margin-left: 20px;
-    margin-top: 1px;
+.orders {
+  margin-left: 100px;
+  margin-top: 1px;
+  margin-bottom: 60px;
+  border: 1px solid grey;
+  height: 70vh;
+  width: 550px;
+  background-color: rgba(128, 128, 128, 0.082);
+  font-family: "Times New Roman", Times, serif;
 }
 
-.buttons{
-    margin-left: 200px;
-    margin-top: 20px;
+.orders input,
+label {
+  margin-left: 20px;
+  margin-top: 1px;
 }
 
-button{
- height: 30px; 
- width: 60px;
+.buttons {
+  margin-left: 200px;
+  margin-top: 20px;
 }
 
-button:hover{
-    background-color: aqua;
-    color: black;
-}
-.resett{
-    border: none;
-    background-color: red;
-    color: white;
+button {
+  height: 30px;
+  width: 60px;
 }
 
-.reset{
-    border: none;
-    background-color: red;
-    color: white;
+button:hover {
+  background-color: aqua;
+  color: black;
 }
-.successs{
-    border: none;
-    background-color: green;
-    color: white;
+.resett {
+  border: none;
+  background-color: red;
+  color: white;
 }
-.success{
-    border: none;
-    background-color: green;
-    color: white;
+
+.reset {
+  border: none;
+  background-color: red;
+  color: white;
+}
+.successs {
+  border: none;
+  background-color: green;
+  color: white;
+}
+.success {
+  border: none;
+  background-color: green;
+  color: white;
 }
 
 /* output section */
 
-.popupwrapper{
-    background: rgba(0, 0, 0, 0.5);
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: none;
+.popupwrapper {
+  background: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: none;
 }
 
-.outputsect{
-    margin: 20px auto;
-    border: 1px solid black;
-    height: 85vh;
-    width: 450px;
-   background-color: white;
-   font-size: 15px;
+.outputsect {
+  margin: 20px auto;
+  border: 1px solid black;
+  height: 85vh;
+  width: 450px;
+  overflow: scroll;
+  background-color: white;
+  font-size: 15px;
 }
 
-
-.titlesect h3{
- margin-left: 170px;
- margin-top: 10px;
+.titlesect h3 {
+  margin-left: 170px;
+  margin-top: 10px;
 }
 
-.titlesect p{
-    margin-left: 30px;
-    margin-top: 10px;
+.titlesect p {
+  margin-left: 30px;
+  margin-top: 10px;
 }
 
-table{
-    margin-left: 30px;
+table {
+  margin-left: 30px;
 }
 
 th {
-    /* margin-left: 40px; */
-    padding: 1rem;
+  /* margin-left: 40px; */
+  padding: 1rem;
 }
 
 td {
-    padding: 1rem;
+  padding: 1rem;
 }
 
-
-
-#totalamt{
-    margin-left: 110px;
-    font-size: 20px;
+#totalamt {
+  margin-left: 110px;
+  font-size: 20px;
 }
